[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "flask>=3.0.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]
